UNet with a bigger number of classes

--- a/semantic_segmentation.ipynb
+++ b/semantic_segmentation.ipynb
@@ -85,13 +85,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_train = COCOStuff(\n",
-    "    images_path=IMG_TRAIN,\n",
-    "    masks_path=MASKS_TRAIN,\n",
-    "    annotations_json=ANNOT_TRAIN,\n",
-    "    transformations=image_transforms,\n",
-    "    target_transformations=mask_transforms\n",
-    ")\n",
+    "# ds_train = COCOStuff(\n",
+    "#     images_path=IMG_TRAIN,\n",
+    "#     masks_path=MASKS_TRAIN,\n",
+    "#     annotations_json=ANNOT_TRAIN,\n",
+    "#     transformations=image_transforms,\n",
+    "#     target_transformations=mask_transforms\n",
+    "# )\n",
     "\n",
     "\n",
     "ds_val = COCOStuff(\n",
@@ -109,17 +109,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img, mask = ds_train[0]\n",
+    "img, mask = ds_val[4145]\n",
     "plt.imshow(img.permute(1, 2, 0).numpy())\n",
     "plt.imshow(mask.numpy(), alpha=0.5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unique(mask.numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import unet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# un = unet.UNet(256)\n",
+    "# xd = un(img.unsqueeze(0))\n",
+    "# xd.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = nn.ConvTranspose2d(3, 3, 2, 2)\n",
+    "c(img.unsqueeze(0)).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img.unsqueeze(0).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(ds_val.coco."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
