Debug loading annotations

--- a/semantic_segmentation.ipynb
+++ b/semantic_segmentation.ipynb
@@ -20,11 +20,12 @@
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
     "from torchvision.transforms import Normalize, ToTensor, Resize, Lambda\n",
-    "from torch import LongTensor\n",
+    "from torch import LongTensor, FloatTensor\n",
     "import torch\n",
     "import PIL\n",
     "import cv2\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import torch.nn.functional as F"
    ]
   },
   {
@@ -40,10 +41,7 @@
     "\n",
     "ANNOT = DATA / \"annotations\"\n",
     "ANNOT_TRAIN = ANNOT / \"stuff_train2017.json\"\n",
-    "ANNOT_VAL = ANNOT / \"stuff_val2017.json\"\n",
-    "\n",
-    "MASKS_TRAIN = ANNOT / \"stuff_train2017_pixelmaps/\"\n",
-    "MASKS_VAL = ANNOT / \"stuff_val2017_pixelmaps/\""
+    "ANNOT_VAL = ANNOT / \"stuff_val2017.json\""
    ]
   },
   {
@@ -62,20 +60,22 @@
    "outputs": [],
    "source": [
     "image_transforms = [\n",
-    "    Resize(INPUT_SIZE),\n",
     "    ToTensor(), \n",
-    "    Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5))\n",
+    "    Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
+    "    Lambda(\n",
+    "        lambda img: F.interpolate(img.unsqueeze(0), INPUT_SIZE, mode=\"bilinear\", align_corners=True).squeeze()\n",
+    "    )\n",
+    "\n",
     "]\n",
     "\n",
     "mask_transforms = [\n",
+    "    Lambda(lambda mask: FloatTensor(np.expand_dims(mask, axis=2)).permute(2, 0, 1)),\n",
     "    Lambda(\n",
-    "        lambda mask: cv2.resize(\n",
-    "            mask.astype(float), \n",
-    "            INPUT_SIZE, \n",
-    "            cv2.INTER_NEAREST\n",
-    "        ).astype(int)\n",
+    "        lambda mask: F.interpolate(\n",
+    "            mask.unsqueeze(0), INPUT_SIZE, mode=\"nearest\"\n",
+    "        ).squeeze()\n",
     "    ),\n",
-    "    Lambda(lambda mask: LongTensor(mask))\n",
+    "    Lambda(lambda mask: mask.squeeze().long())    \n",
     "]"
    ]
   },
@@ -85,18 +85,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ds_train = COCOStuff(\n",
-    "#     images_path=IMG_TRAIN,\n",
-    "#     masks_path=MASKS_TRAIN,\n",
-    "#     annotations_json=ANNOT_TRAIN,\n",
-    "#     transformations=image_transforms,\n",
-    "#     target_transformations=mask_transforms\n",
-    "# )\n",
+    "ds_train = COCOStuff(\n",
+    "    images_path=IMG_TRAIN,\n",
+    "    annotations_json=ANNOT_TRAIN,\n",
+    "    transformations=image_transforms,\n",
+    "    target_transformations=mask_transforms\n",
+    ")\n",
     "\n",
     "\n",
     "ds_val = COCOStuff(\n",
     "    images_path=IMG_VAL,\n",
-    "    masks_path=MASKS_VAL,\n",
     "    annotations_json=ANNOT_VAL,\n",
     "    transformations=image_transforms,\n",
     "    target_transformations=mask_transforms\n",
@@ -109,9 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img, mask = ds_val[4145]\n",
-    "plt.imshow(img.permute(1, 2, 0).numpy())\n",
-    "plt.imshow(mask.numpy(), alpha=0.5)"
+    "ds_val.n_classes"
    ]
   },
   {
@@ -120,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.unique(mask.numpy())"
+    "img, mask = ds_val.get_image_and_mask(ds_val._image_id(4145))"
    ]
   },
   {
@@ -129,7 +125,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import unet"
+    "plt.imshow(img)\n",
+    "plt.imshow(mask, alpha=0.7)\n",
+    "plt.show()"
    ]
   },
   {
@@ -138,54 +136,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# un = unet.UNet(256)\n",
-    "# xd = un(img.unsqueeze(0))\n",
-    "# xd.size()"
+    "np.unique(mask)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn as nn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = nn.ConvTranspose2d(3, 3, 2, 2)\n",
-    "c(img.unsqueeze(0)).size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img.unsqueeze(0).size()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list(ds_val.coco."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
