--- a/semantic_segmentation.ipynb
+++ b/semantic_segmentation.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "image_transforms = [\n",
     "    ToTensor(), \n",
-    "#     Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
+    "    Normalize((0.5, 0.5, 0.5), (0.5, 0.5, 0.5)),\n",
     "    Lambda(\n",
     "        lambda img: F.interpolate(img.unsqueeze(0), INPUT_SIZE, mode=\"bilinear\", align_corners=True).squeeze()\n",
     "    )\n",
@@ -98,12 +98,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_train = COCOStuff(\n",
-    "    images_path=IMG_TRAIN,\n",
-    "    annotations_json=ANNOT_TRAIN,\n",
-    "    transformations=image_transforms,\n",
-    "    target_transformations=mask_transforms\n",
-    ")\n",
+    "ds_val.coco.loadAnns()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ds_train = COCOStuff(\n",
+    "#     images_path=IMG_TRAIN,\n",
+    "#     annotations_json=ANNOT_TRAIN,\n",
+    "#     transformations=image_transforms,\n",
+    "#     target_transformations=mask_transforms\n",
+    "# )\n",
     "\n",
     "\n",
     "ds_val = COCOStuff(\n",
@@ -120,7 +129,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_train.n_classes, ds_val.n_classes"
+    "annotations = ds_val.coco.loadAnns(ds_val.coco.getAnnIds(139))\n",
+    "annotations[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_val.n_classes, ds_val.n_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds_val.coco.loadCats(ds_val.coco.getCatIds())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask"
    ]
   },
   {
@@ -130,9 +167,24 @@
    "outputs": [],
    "source": [
     "img, mask = ds_val.get_image_and_mask(ds_val._image_id(4145))\n",
-    "plt.imshow(img)\n",
-    "plt.imshow(mask, alpha=0.7)\n",
-    "plt.show()"
+    "for i in np.unique(mask):\n",
+    "    cat = [\n",
+    "        c for c in ds_val.coco.loadCats(ds_val.coco.getCatIds())\n",
+    "        if c[\"id\"] == i\n",
+    "    ]\n",
+    "    plt.title(cat)\n",
+    "    plt.imshow(img)\n",
+    "    plt.imshow(mask==i, alpha=0.7)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unique(mask)"
    ]
   },
   {
@@ -184,8 +236,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iters = 100\n",
-    "epochs = 50\n",
+    "iters = 1\n",
+    "epochs = 1\n",
     "loss_hist = []\n",
     "acc_hist = []\n",
     "loss_val_hist = []\n",
@@ -280,9 +332,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ml",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "ml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
