Coco Stuff dataset with superclasses

--- a/semantic_segmentation.ipynb
+++ b/semantic_segmentation.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from coco_stuff import COCOStuff\n",
+    "from coco_stuff import COCOStuffSuper\n",
     "from unet import UNet\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
@@ -98,24 +98,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_val.coco.loadAnns()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ds_train = COCOStuff(\n",
-    "#     images_path=IMG_TRAIN,\n",
-    "#     annotations_json=ANNOT_TRAIN,\n",
-    "#     transformations=image_transforms,\n",
-    "#     target_transformations=mask_transforms\n",
-    "# )\n",
+    "ds_train = COCOStuffSuper(\n",
+    "    images_path=IMG_TRAIN,\n",
+    "    annotations_json=ANNOT_TRAIN,\n",
+    "    transformations=image_transforms,\n",
+    "    target_transformations=mask_transforms\n",
+    ")\n",
     "\n",
     "\n",
-    "ds_val = COCOStuff(\n",
+    "ds_val = COCOStuffSuper(\n",
     "    images_path=IMG_VAL,\n",
     "    annotations_json=ANNOT_VAL,\n",
     "    transformations=image_transforms,\n",
@@ -129,8 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotations = ds_val.coco.loadAnns(ds_val.coco.getAnnIds(139))\n",
-    "annotations[0]"
+    "ds_train.n_classes, ds_val.n_classes"
    ]
   },
   {
@@ -139,25 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_val.n_classes, ds_val.n_classes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds_val.coco.loadCats(ds_val.coco.getCatIds())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask"
+    "ds_val.classes_names"
    ]
   },
   {
@@ -168,23 +140,11 @@
    "source": [
     "img, mask = ds_val.get_image_and_mask(ds_val._image_id(4145))\n",
     "for i in np.unique(mask):\n",
-    "    cat = [\n",
-    "        c for c in ds_val.coco.loadCats(ds_val.coco.getCatIds())\n",
-    "        if c[\"id\"] == i\n",
-    "    ]\n",
+    "    cat = ds_val.categories[ds_val.class_to_category[i]]\n",
     "    plt.title(cat)\n",
     "    plt.imshow(img)\n",
     "    plt.imshow(mask==i, alpha=0.7)\n",
     "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.unique(mask)"
    ]
   },
   {
