train a unet with over 50% train and over 40% val accuracy on superclasses

--- a/semantic_segmentation.ipynb
+++ b/semantic_segmentation.ipynb
@@ -28,7 +28,9 @@
     "from tqdm import tqdm\n",
     "from torch.utils.data import DataLoader\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim"
+    "import torch.optim as optim\n",
+    "from ipywidgets import interact, fixed\n",
+    "import ipywidgets as widgets"
    ]
   },
   {
@@ -63,7 +65,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "INPUT_SIZE = 256, 256 #(512, 512)"
+    "INPUT_SIZE = 512, 512"
    ]
   },
   {
@@ -140,7 +142,7 @@
    "source": [
     "img, mask = ds_val.get_image_and_mask(ds_val._image_id(4145))\n",
     "for i in np.unique(mask):\n",
-    "    cat = ds_val.categories[ds_val.class_to_category[i]]\n",
+    "    cat = ds_val.classes_names[i]\n",
     "    plt.title(cat)\n",
     "    plt.imshow(img)\n",
     "    plt.imshow(mask==i, alpha=0.7)\n",
@@ -153,8 +155,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "loader_train = DataLoader(ds_train, batch_size=4,shuffle=True)\n",
-    "loader_val = DataLoader(ds_val, batch_size=2)\n",
+    "loader_train = DataLoader(ds_train, batch_size=3,shuffle=True)\n",
+    "loader_val = DataLoader(ds_val, batch_size=1)\n",
     "iter_train = iter(loader_train)\n",
     "iter_val = iter(loader_val)"
    ]
@@ -176,7 +178,7 @@
    "source": [
     "model = deepcopy(model_base).to(device)\n",
     "loss_fn = nn.CrossEntropyLoss().to(device)\n",
-    "optimizer= optim.Adam(model.parameters(), lr=4e-2) #, weight_decay=10e-5)"
+    "optimizer= optim.Adam(model.parameters(), lr=6e-4)#, weight_decay=10e-5)"
    ]
   },
   {
@@ -196,8 +198,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "iters = 1\n",
-    "epochs = 1\n",
+    "iters = 500\n",
+    "epochs = 10\n",
     "loss_hist = []\n",
     "acc_hist = []\n",
     "loss_val_hist = []\n",
@@ -228,24 +230,35 @@
     "    loss_hist.append(np.mean(ls))\n",
     "    acc_hist.append(np.mean(acc))\n",
     "    \n",
+    "    \n",
     "    model.eval()\n",
     "    ls = []\n",
     "    acc = []\n",
-    "    for _ in range(10):\n",
-    "        X_val, y_val = next(iter_val)\n",
-    "        X_val, y_val = X_val.to(device), y_val.to(device)\n",
-    "        y_pred = model(X_val)\n",
-    "        _, logits = torch.max(y_pred, 1)\n",
-    "        val_loss = loss_fn(y_pred, y_val)\n",
-    "        val_accuracy = (logits == y_val).sum().item() / y_val.nelement()\n",
-    "        ls.append(val_loss.item())\n",
-    "        acc.append(val_accuracy)     \n",
-    "    loss_val_hist.append(np.mean(ls))\n",
-    "    acc_val_hist.append(np.mean(acc))\n",
-    "    print(\n",
-    "            f\"val_loss: {loss_val_hist[-1]} | \"\n",
-    "            f\"val_acc: {acc_val_hist[-1]}\"\n",
-    "        )\n"
+    "    with torch.no_grad():\n",
+    "        for _ in range(10):\n",
+    "            X_val, y_val = next(iter_val)\n",
+    "            X_val, y_val = X_val.to(device), y_val.to(device)\n",
+    "            y_pred = model(X_val)\n",
+    "            _, logits = torch.max(y_pred, 1)\n",
+    "            val_loss = loss_fn(y_pred, y_val)\n",
+    "            val_accuracy = (logits == y_val).sum().item() / y_val.nelement()\n",
+    "            ls.append(val_loss.item())\n",
+    "            acc.append(val_accuracy)     \n",
+    "        loss_val_hist.append(np.mean(ls))\n",
+    "        acc_val_hist.append(np.mean(acc))\n",
+    "        print(\n",
+    "                f\"val_loss: {loss_val_hist[-1]} | \"\n",
+    "                f\"val_acc: {acc_val_hist[-1]}\"\n",
+    "            )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_hist"
    ]
   },
   {
@@ -273,28 +286,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img, mask = ds_val[60]\n",
-    "_, mask_pred = torch.max(model(img.unsqueeze(0).to(device)), 1)\n",
-    "mask_pred = mask_pred.cpu()\n",
-    "\n",
-    "print(\"accuracy\", (mask.numpy() == mask_pred.numpy()).mean())\n",
-    "plt.imshow(img.permute(1, 2, 0))\n",
-    "plt.show()\n",
-    "\n",
-    "plt.imshow(mask) #, alpha = 0.3)\n",
-    "plt.show()\n",
-    "\n",
-    "# plt.imshow(img.permute(1, 2, 0))\n",
-    "plt.imshow(mask_pred.squeeze()) #, alpha = 0.3)\n",
-    "plt.show()\n"
+    "np.random.seed(0)\n",
+    "colormap = np.random.rand(ds_val.n_classes, 3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def visualize_validation(i: int, model: nn.Module):\n",
+    "    model.eval()\n",
+    "    img, _ = ds_val.get_image_and_mask(ds_val._image_id(i))\n",
+    "    img_tensor, mask = ds_val[i]\n",
+    "    _, mask_pred = torch.max(model(img_tensor.unsqueeze(0).to(device)), 1)\n",
+    "    mask_pred = mask_pred.cpu().squeeze()\n",
+    "    plt.imshow(img)\n",
+    "    plt.show()\n",
+    "    \n",
+    "    classes = np.unique(np.concatenate((mask.reshape(-1), mask_pred.reshape(-1))))\n",
+    "    plt.figure(figsize=(2, 5 * len(classes)))\n",
+    "    plt.imshow(colormap[np.expand_dims(classes, 0)])\n",
+    "    plt.title(f\"{[ds_val.classes_names[c] for c in classes]}\")\n",
+    "    plt.show()\n",
+    "    \n",
+    "    accuracy_map = mask.numpy() == mask_pred.numpy()\n",
+    "    \n",
+    "    plt.figure(figsize=(10, 10))\n",
+    "    plt.subplot(1, 3, 1)\n",
+    "    plt.title(\"ground truth\")\n",
+    "    plt.imshow(colormap[mask]) #, alpha = 0.3)\n",
+    "    plt.subplot(1, 3, 2)\n",
+    "    plt.title(\"prediction\")\n",
+    "    plt.imshow(colormap[mask_pred]) #, alpha = 0.3)\n",
+    "    plt.subplot(1, 3, 3)\n",
+    "    plt.title(\"correct segmentation\")\n",
+    "    plt.imshow(accuracy_map, cmap=\"gray\") #, alpha = 0.3)\n",
+    "    plt.show()\n",
+    "    print(\"accuracy\", accuracy_map.mean())\n",
+    "\n",
+    "interact(\n",
+    "    visualize_validation,\n",
+    "    i=widgets.IntSlider(min=0, max=len(ds_val), value=1416),\n",
+    "    model=fixed(model)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
-   "name": "python3"
+   "name": "ml"
   },
   "language_info": {
    "codemirror_mode": {
