a simple classification network

--- a/superclass_classification/superclass_classification.ipynb
+++ b/superclass_classification/superclass_classification.ipynb
@@ -31,7 +31,9 @@
     "import torch.optim as optim\n",
     "from ipywidgets import interact, fixed\n",
     "import ipywidgets as widgets\n",
-    "import cifar_names as cn"
+    "import cifar_names as cn\n",
+    "\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -113,8 +115,112 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class ConvBlock(nn.Module):\n",
+    "    def __init__(self, channels_in: int, channels_out: int):\n",
+    "        super().__init__()\n",
+    "        self.conv_1 = nn.Conv2d(channels_in, channels_out, kernel_size=3, padding=1)\n",
+    "        self.conv_2 = nn.Conv2d(channels_out, channels_out, kernel_size=3, padding=1)\n",
+    "        self.conv_3 = nn.Conv2d(channels_out, channels_out, kernel_size=3, padding=1)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.batch_norm = nn.BatchNorm2d(channels_out)\n",
+    "    def forward(self, X):\n",
+    "        c1 = self.conv_1(X)\n",
+    "        c2 = self.conv_2(c1)\n",
+    "        c3 = self.conv_3(c2)\n",
+    "        re = self.relu(c3)\n",
+    "        bn = self.batch_norm(re)\n",
+    "        return bn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_base = nn.Sequential(\n",
+    "    ConvBlock(3, 32),\n",
+    "    nn.Conv2d(32, 64, kernel_size=3, padding=1, stride=2),\n",
+    "    ConvBlock(64, 64),\n",
+    "    nn.Conv2d(64, 128, kernel_size=3, padding=1, stride=2),\n",
+    "    ConvBlock(128, 128),\n",
+    "    nn.Conv2d(128, 256, kernel_size=3, padding=1, stride=2),\n",
+    "    ConvBlock(256, 256),\n",
+    "    nn.Conv2d(256, 512, kernel_size=3, padding=1, stride=2),\n",
+    "    ConvBlock(512, 512),    \n",
+    "    nn.Conv2d(512, 1024, kernel_size=3, padding=1, stride=2),\n",
+    "    ConvBlock(1024, 1024),    \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from time import sleep"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iters = 5\n",
+    "epochs = 10\n",
+    "loss_hist = []\n",
+    "acc_hist = []\n",
+    "loss_val_hist = []\n",
+    "acc_val_hist = []\n",
+    "\n",
+    "for i in range(iters):\n",
+    "    epochbar = tqdm(range(epochs))\n",
+    "    ls = [0]\n",
+    "    acc = [0]\n",
+    "    for _ in epochbar:\n",
+    "        epochbar.set_description(\n",
+    "            f\"iter: {i} |\\t\" \n",
+    "            f\"train_loss: {np.mean(ls)} |\\t\"\n",
+    "            f\"train_acc: {np.mean(acc)}\"\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x, (y_c, y_s) = next(iter_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = model_base(x)\n",
+    "out.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
